Revision history for App-skryf

{{$NEXT}}

0.008  2013-07-14 23:59:05 EDT
    - New release, adds following:
      - Disqus integration
      - Google Analytics

0.007_4  2013-07-11 00:35:43 EDT
    - Extended documentation

0.007_3  2013-07-09 15:39:51 EDT
    - Pull in configuration parameters from user defined config

0.007_2  2013-07-09 15:25:38 EDT
    - Just a test version

0.007_1  2013-07-09 15:23:20 EDT
    - 1804fa4 use milla
    - 5d4e64b autoload plugins from config
    - 121f2d3 update cpan reqs
    - 48065cd add disqus support
    - 569e734 add datetime format req
    - 2a5f43c update deploy docs