@@ -17,3 +17,7 @@ pm_to_blib
 App-skryf*
 lib/Rex
 !META.json
+perltidy.LOG
+.tidyall.d
+MYMETA.json
+_build_params
