@@ -13,26 +13,39 @@
             'Disqus::Tiny'    => 1,
         },
 
-        # github username
-        github => '',
+        # mongo database
+        db => {
+         dsn => 'mongodb://localhost:27017',
+         name => 'skryf',
+         collection => 'blog',
+        },
 
-        # coderwall username
-        coderwall => '',
+        social => {
 
-        # disqus forum name
-        disqus => '',
+            # github username
+            github => '',
 
-        ## Available vars:
-        ##   %bindir%   (path to executable's dir)
-        ##   %homedir%  (current $HOME)
-        post_directory     => '%homedir%/blog/posts',
-        static_directory   => '%homedir%/blog/static',
-        template_directory => '%homedir%/blog/templates',
-        media_directory    => '%homedir%/blog/public',
+            # coderwall username
+            coderwall => '',
 
-        post_template   => 'post',
-        index_template  => 'index',
-        static_template => 'static',
+            # disqus forum name
+            disqus => '',
+
+            # google plus
+            google_plus => '',
+
+            # stackoverflow
+            stackoverflow => '',
+
+            # gittip
+            gittip => '',
+
+            # pause
+            pause => '',
+        },
+
+        template_directory => '~/blog/source/templates',
+        media_directory    => '~/blog/source/public',
     },
 
     hypnotoad => {
@@ -40,5 +53,4 @@
         workers => 5,
         proxy   => 1,
     },
-}
-;
+};
